Ticket #14919 (confirmed enhancement)

Opened 5 months ago

Last modified 5 months ago

Missing B3 and B6 formats in wxPaperSize enumeration.

Reported by: wbruhin Owned by:
Priority: low Milestone:
Component: printing Version: 2.9.4
Keywords: Cc:
Blocked By: Patch: no
Blocking:

Description

Could the above sizes be added?

B2 707 x 500 mm 27.8 x 19.7 in
B6 176 x 125 mm 6.9 x 4.9 in

Any chance that the documentation could sort the enumerations by their name instead of by their numeric value?

 http://docs.wxwidgets.org/trunk/defs_8h.html#a2f01b8ae721520dff55dee68a882629a

Change History

Changed 5 months ago by vadz

  • priority changed from normal to low
  • status changed from new to confirmed

I don't know how widespread are these formats, there doesn't seem to be the corresponding DMPAPER_XXX values for them in Windows headers. Although DMPAPER_PENV_3_ROTATED has the same size as you give for B6, so you could use it already. But there is no match for B2.

If you do find the Windows paper ID for it, it would be pretty simple to add it to wxPrintPaperDatabase::CreateDatabase() in src/common/paper.cpp.

As for the docs, I agree that it would be better to sort alphabetically, will do.

Changed 5 months ago by VZ

(In [73257]) Sort wxPAPER_XXX constants alphabetically in the documentation.

This makes it much simpler to find the one you want.

See #14919.

Changed 5 months ago by wbruhin

First of all thanks for the alpha sort.

Looked around and can not find a DM_PAPER definition for it. Found other definitions in the MS world but not sure if they are of any use - if not there is the work around you mention above.

 http://msdn.microsoft.com/en-us/library/system.printing.pagemediasizename.aspx?cs-save-lang=1&cs-lang=cpp#code-snippet-1

 http://msdn.microsoft.com/en-us/library/cc195165.aspx

 http://www.ietf.org/rfc/rfc1759.txt

Note: See TracTickets for help on using tickets.