Sort wxPAPER_XXX constants alphabetically in the documentation.

This makes it much simpler to find the one you want.

See #14919.

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@73257 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775